# POG

./: README.md  hahah  user guide  团队文档.md
kinova_control/launch/: kinova_control.launch
kinova_description/launch/: display_j2s7s300.launch
kinova_description/urdf/: j2s7s300_standalone.xacro
kinova_gazebo/: Gazebo.md
kinova_gazebo/launch/: robot_fix_launch.launch  robot_launch.launch
kinova_gazebo/worlds/: jaco_1.world  jaco_fix.world
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt  package.xml
kinova_moveit/kinova_arm_moveit_demo/include/: handeye.h
kinova_moveit/kinova_arm_moveit_demo/include/robotiq_c_model_control/: gripperControl.h
kinova_moveit/kinova_arm_moveit_demo/msg/: targetState.msg  targetsVector.msg  toolposeChange.msg
kinova_moveit/kinova_arm_moveit_demo/src/: constant-move-test.cpp.md  eye2hand_calib_control.cpp  eye_to_hand_calculate.cpp  finger_control.cpp  finger_control_client.cpp  motion_plan.cpp  our_pick_place.cpp  simple_move.cpp  talker1.cpp  visual_detect_simulate.cpp  无标题文档
kinova_moveit/robot_configs/j2s7s300_moveit_config/config/: joint_limits.yaml
kinova_moveit/robot_configs/j2s7s300_moveit_config/launch/: j2s7s300_gazebo_demo.launch  j2s7s300_no_rviz.launch  moveit.rviz  trajectory_execution.launch.xml
rviz_teleop_commander/: CMakeLists.txt  package.xml
rviz_teleop_commander/msg/: grab_result.msg  targets_tag.msg
rviz_teleop_commander/src/: teleop_pad.cpp  teleop_pad.h
table_basket/: CMakeLists.txt  package.xml
table_basket/launch/: display.launch  gazebo.launch
table_basket/meshes/: right_basket.STL
table_basket/urdf/: kinect_box.urdf  table_basket.urdf  table_kinova.urdf  table_kinova.urdf.xacro
table_basket_new/: CMakeLists.txt  package.xml  urdf.rviz
table_basket_new/launch/: display.launch  gazebo.launch
table_basket_new/meshes/: base_link.STL  right_basket.STL  table.STL
table_basket_new/urdf/: table_basket_new.urdf  table_kinova.urdf.xacro
table_board_fix/: CMakeLists.txt  package.xml
table_board_fix/launch/: display.launch  gazebo.launch
table_board_fix/meshes/: left_basket.STL  right_board.STL  table.STL
table_board_fix/urdf/: kinect_box.urdf.xacro  table_board_fix.urdf  table_kinova.urdf.xacro
table_fix/: CMakeLists.txt  package.xml
table_fix/launch/: display.launch  gazebo.launch
table_fix/meshes/: left_basket.STL  table.STL
table_fix/urdf/: table_fix.urdf  table_kinova.urdf.xacro
